# ShouldBeStandard

./: .gitignore  CMakeLists.txt  README.md
include/: concurrent_vector  debugging
include/internal/: sbs_macros.h
tests/: CMakeLists.txt  test_concurrent_vector.cpp  test_debugging.cpp
